# rifle

./: .clangd  .gitignore  CMakeLists.txt  main.cpp
src/components/: HexMap.h
src/ecs/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityComponentSystem.cpp  EntityComponentSystem.h  EntityManager.h  System.h  SystemManager.h  core.h
src/ecs/basicComponents/: RigidBody.h  Transform.h
src/logger/: Logger.cpp  Logger.h
src/rendering/: RenderingSystem.cpp  RenderingSystem.h  TerrarianRenderSystem.cpp  TerrarianRenderSystem.h
